--- a/SmartBar_r1/app/src/main/AndroidManifest.xml
+++ b/SmartBar_r1/app/src/main/AndroidManifest.xml
@@ -14,11 +14,11 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name=".MyApplication">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".StartupActivity"
             android:label="@string/app_name" >
@@ -59,6 +59,10 @@
         <activity
             android:name=".DrinkOrderedActivity"
             android:label="@string/done" >
+        </activity>
+        <activity
+            android:name=".CustomizeDrinkActivity"
+            android:label="@string/customize" >
         </activity>
     </application>
 
