--- a/UI_Code/app/src/main/AndroidManifest.xml
+++ b/UI_Code/app/src/main/AndroidManifest.xml
@@ -33,7 +33,12 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.trider.smartbarui.MainActivity" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED" />
@@ -46,7 +51,7 @@
                 android:resource="@xml/accessory_filter" />
         </activity>
         <activity
-            android:name=".TestActivity"
+            android:name=".MainMenu"
             android:label="@string/title_activity_test"
             android:parentActivityName=".MainActivity" >
             <meta-data
@@ -56,10 +61,10 @@
         <activity
             android:name=".IdleMenu"
             android:label="@string/title_activity_idle_menu"
-            android:parentActivityName=".TestActivity" >
+            android:parentActivityName=".MainMenu" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.trider.smartbarui.TestActivity" />
+                android:value=".MainMenu" />
         </activity>
         <activity
             android:name=".PickUpDrink"
@@ -116,10 +121,10 @@
         <activity
             android:name=".SystemStatus"
             android:label="@string/title_activity_system_status"
-            android:parentActivityName=".TestActivity" >
+            android:parentActivityName=".MainMenu" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.trider.smartbarui.TestActivity" />
+                android:value=".MainMenu" />
         </activity>
         <activity
             android:name=".DisplayQueue"
@@ -148,6 +153,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.trider.smartbarui.SystemStatus" />
+        </activity>
+        <activity
+            android:name=".TestKeyBoard"
+            android:label="@string/title_activity_test_key_board"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.trider.smartbarui.MainActivity" />
         </activity>
     </application>
 
