--- a/SmartBar_r1/app/src/main/AndroidManifest.xml
+++ b/SmartBar_r1/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/login_actionbar"
+            android:parentActivityName=".StartupActivity"
             android:windowSoftInputMode="adjustPan" >
         </activity>
 
@@ -42,27 +43,33 @@
         <activity
             android:name=".NewUserActivity"
             android:label="@string/new_user_actionbar"
+            android:parentActivityName=".StartupActivity"
             android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
             android:name=".WelcomeActivity"
+            android:parentActivityName=".StartupActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
             android:name=".LibraryBrowseActivity"
             android:label="@string/library_browse_actionbar"
+            android:parentActivityName=".WelcomeActivity"
             android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
             android:name=".ConfirmationActivity"
+            android:parentActivityName=".LibraryBrowseActivity"
             android:label="@string/confirmation_actionbar" >
         </activity>
         <activity
             android:name=".DrinkOrderedActivity"
+            android:parentActivityName=".ConfirmationActivity"
             android:label="@string/done" >
         </activity>
         <activity
             android:name=".CustomizeDrinkActivity"
+            android:parentActivityName=".ConfirmationActivity"
             android:label="@string/customize" >
         </activity>
     </application>
