--- a/SmartBarMobile/.classpath
+++ b/SmartBarMobile/.classpath
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="res"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="C:/Users/lamperry/AppData/Local/Android/sdk/platforms/android-21/android.jar" sourcepath="C:/Users/lamperry/AppData/Local/Android/sdk/sources/android-21">
+	<classpathentry kind="lib" path="C:/Users/lamperry/AppData/Local/Android/sdk/platforms/android-19/android.jar" sourcepath="C:/Users/lamperry/AppData/Local/Android/sdk/sources/android-21">
 		<attributes>
 			<attribute name="javadoc_location" value="file:/C:/Users/lamperry/AppData/Local/Android/sdk/docs/reference"/>
 		</attributes>
@@ -13,6 +12,8 @@
 			<accessrule kind="nonaccessible" pattern="com/android/internal/**"/>
 		</accessrules>
 	</classpathentry>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.ecs.android.sample.oauth2"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
