Winter Quarter Check Off
robosst

--- a/SmartBarMobile/.classpath
+++ b/SmartBarMobile/.classpath
@@ -12,7 +12,7 @@
 			<accessrule kind="nonaccessible" pattern="com/android/internal/**"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/com.ecs.android.sample.oauth2"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/com.ecs.android.sample.oauth2"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="output" path="bin/classes"/>
