--- a/SmartBarMobile/bin/AndroidManifest.xml
+++ b/SmartBarMobile/bin/AndroidManifest.xml
@@ -12,10 +12,12 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <!--
      To retrieve OAuth 2.0 tokens or invalidate tokens to disconnect a user. This disconnect
-     option is required to comply with the Google+ Sign-In developer policies
+     option is required to comply with the Google+ Sign-In developer policies
     -->
-    <uses-permission android:name="android.permission.USE_CREDENTIALS" /> <!-- To retrieve the account name (email) as part of sign-in: -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" /> <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+ <!-- To retrieve the account name (email) as part of sign-in: -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+ <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -73,15 +75,25 @@
             android:name=".CustomizeDrinkActivity"
             android:label="@string/customize" >
         </activity>
+        <activity
+            android:name=".OAuthAccessTokenActivity"
+            android:launchMode="singleTask" >
+>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
-		<activity android:name=".OAuthAccessTokenActivity" android:launchMode="singleTask">>
-			<intent-filter>
-				<action android:name="android.intent.action.VIEW" />
-				<category android:name="android.intent.category.DEFAULT" />
-				<category android:name="android.intent.category.BROWSABLE" />
-				<data android:scheme="http" android:host="localhost"  />
-			</intent-filter>
-		</activity>  
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="localhost"
+                    android:scheme="http" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".MissingParamsActivity"
+            android:label="@string/title_activity_missing_params" >
+        </activity>
     </application>
 
 </manifest>
